--- a/INFORMATICS/лр_6/main/article.tex
+++ b/INFORMATICS/лр_6/main/article.tex
@@ -46,18 +46,18 @@ C аналогичной ситуацией мы встречаемся и в с
 \end{figure}
 \newpage
 
+\begin{tabular}{c|c|c|c|c|}
+    \multicolumn{1}{l}{$\oplus$} & \multicolumn{1}{l}{0} & \multicolumn{1}{l}{1} & \multicolumn{1}{l}{2} & \multicolumn{1}{l}{3} \\
+    \cline{2-5}
+    0 & 0 & 1 & 2 & 3 \\
+    \cline{2-5}
+    1 & 1 & 2 & 3 & 0 \\
+    \cline{2-5}
+    2 & 2 & 3 & 0 & 1 \\
+    \cline{2-5}
+    3 & 3 & 0 & 1 & 2 \\
+    \cline{2-5}
+  \end{tabular}
 
 
-\begin{tabular}{|c|c|c|c|c|}
-\hline
-ы & 0 & 1 & 2 & 3 \\
-\hline
-0 & 0 & 1 & 2 & 3 \\
-\hline
-1 & 1 & 2 & 3 & 0 \\
-\hline
-2 & 2 & 3 & 0 & 1 \\
-\hline
-3 & 3 & 0 & 1 & 2 \\
-\hline
-\end{tabular}
+
