--- a/INFORMATICS/лр_6/main/main.tex
+++ b/INFORMATICS/лр_6/main/main.tex
@@ -18,7 +18,7 @@
 \usepackage{graphicx}
 \graphicspath{{./images/}} % Путь до папки с изображениями
 
-\usepackage{amsmath, amsfonts, amssymb, amsthm, mathtools} % ams пакеты для математики, табуляции
+\usepackage{amsmath, amsfonts, amssymb, amsthm, mathtools} % пакеты для математики
 \usepackage{multirow}
 \usepackage{enumitem}
 
@@ -29,6 +29,7 @@
 
 
 \setcounter{page}{53}
+\setcounter{figure}{5}
 \renewcommand{\thepage}{\hfill\textbf{\arabic{page}}}
 
 \usepackage{pgfplots}
