--- a/PROGA/lab8/client/src/main/resources/i18n/locale_ru.properties
+++ b/PROGA/lab8/client/src/main/resources/i18n/locale_ru.properties
@@ -24,3 +24,9 @@ collection.house.name=house name
 collection.year=year
 collection.numberOfFlats=number of flats
 collection.furnish=furnish
+collection.useId=user ID
+checkbox.onlyMine=show only mine
+button.change=change
+button.remove=remove
+commandSelector.promt=choose command
+commandSelector.commandArgsPromt=command arguments
