--- a/PROGA/lab8/client/src/main/resources/i18n/locale_ru.properties
+++ b/PROGA/lab8/client/src/main/resources/i18n/locale_ru.properties
@@ -30,3 +30,8 @@ button.change=change
 button.remove=remove
 commandSelector.promt=choose command
 commandSelector.commandArgsPromt=command arguments
+commandSelector.execute=execute
+button.create=create
+collection.editing=editing
+collection.creating=creating
+button.close=close
