--- a/PROGA/lab8/client/src/main/resources/i18n/locale_en.properties
+++ b/PROGA/lab8/client/src/main/resources/i18n/locale_en.properties
@@ -1,37 +1,42 @@
-app.name=niGGer
+app.name=Okak
 
 form.label.auth=Auth
 form.label.reg=Registration
-form.label.name=name
-form.label.pass=password
-form.input.promt.name=enter your name
-form.input.promt.pass=enter your password
-form.button.auth=auth
-form.button.reg=registr
+form.label.name=Name
+form.label.pass=Password
+form.input.promt.name=Enter your name
+form.input.promt.pass=Enter your password
+form.button.auth=Auth
+form.button.reg=Sign in
 
-header.language.change=change language
-form.button.back=back
-collection.name=name
-collection.id=id
-collection.y=y
-collection.x=x
-collection.date=date
-collection.area=area
-collection.NumOfRooms=number of rooms
-collection.height=height
-collection.transport=transport
-collection.house.name=house name
-collection.year=year
-collection.numberOfFlats=number of flats
-collection.furnish=furnish
-collection.useId=user ID
-checkbox.onlyMine=show only mine
-button.change=change
-button.remove=remove
-commandSelector.promt=choose command
-commandSelector.commandArgsPromt=command arguments
-commandSelector.execute=execute
-button.create=create
-collection.editing=editing
-collection.creating=creating
-button.close=close
+header.language.change=Change language
+form.button.back=Back
+collection.name=Name
+collection.id=ID
+collection.y=Y
+collection.x=X
+collection.date=Date
+collection.area=Area
+collection.NumOfRooms=Number of rooms
+collection.height=Height
+collection.transport=Transport
+collection.house.name=House name
+collection.year=Year
+collection.numberOfFlats=Number of flats
+collection.furnish=Furnish
+collection.useId=User ID
+checkbox.onlyMine=Show only mine
+button.change=Change
+button.remove=Remove
+commandSelector.promt=Choose command
+commandSelector.commandArgsPromt=Command arguments
+commandSelector.execute=Execute
+button.create=Create
+collection.editing=Editing
+collection.creating=Creating
+button.close=Close
+view.table=Table
+view.graph=Graph
+button.logOut=Log out
+button.deleteAccount=Delete account
+button.update=Update
