--- a/PROGA/lab8/client/src/main/resources/i18n/locale_ru.properties
+++ b/PROGA/lab8/client/src/main/resources/i18n/locale_ru.properties
@@ -1,37 +1,42 @@
-app.name=\u043D\u0438\u0413\u0413\u0435\u0440
+app.name=Okak
 
-form.label.auth=\u0412\u043E\u0439\u0442\u0438
+form.label.auth=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
 form.label.reg=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
-form.label.name=\u0438\u043C\u044F
-form.label.pass=\u043F\u0430\u0440\u043E\u043B\u044C
-form.input.promt.name=\u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u0432\u043E\u0451 \u0438\u043C\u044F
-form.input.promt.pass=\u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u0432\u043E\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
-form.button.auth=\u0432\u043E\u0439\u0442\u0438
-form.button.reg=\u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
+form.label.name=\u0418\u043C\u044F
+form.label.pass=\u041F\u0430\u0440\u043E\u043B\u044C
+form.input.promt.name=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448\u0435 \u0438\u043C\u044F
+form.input.promt.pass=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448 \u043F\u0430\u0440\u043E\u043B\u044C
+form.button.auth=\u0412\u043E\u0439\u0442\u0438
+form.button.reg=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 
-header.language.change=\u0438\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u044F\u0437\u044B\u043A
-form.button.back=back
-collection.name=name
-collection.id=id
-collection.y=Create property
-collection.x=x
-collection.date=date
-collection.area=area
-collection.NumOfRooms=number of rooms
-collection.height=height
-collection.transport=transport
-collection.house.name=house name
-collection.year=year
-collection.numberOfFlats=number of flats
-collection.furnish=furnish
-collection.useId=user ID
-checkbox.onlyMine=show only mine
-button.change=change
-button.remove=remove
-commandSelector.promt=choose command
-commandSelector.commandArgsPromt=command arguments
-commandSelector.execute=execute
-button.create=create
-collection.editing=editing
-collection.creating=creating
-button.close=close
+header.language.change=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u044F\u0437\u044B\u043A
+form.button.back=\u041D\u0430\u0437\u0430\u0434
+collection.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+collection.id=ID
+collection.y=Y
+collection.x=X
+collection.date=\u0414\u0430\u0442\u0430
+collection.area=\u041F\u043B\u043E\u0449\u0430\u0434\u044C
+collection.NumOfRooms=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u043E\u043C\u043D\u0430\u0442
+collection.height=\u0412\u044B\u0441\u043E\u0442\u0430
+collection.transport=\u0422\u0440\u0430\u043D\u0441\u043F\u043E\u0440\u0442
+collection.house.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043C\u0430
+collection.year=\u0413\u043E\u0434
+collection.numberOfFlats=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u0432\u0430\u0440\u0442\u0438\u0440
+collection.furnish=\u041E\u0442\u0434\u0435\u043B\u043A\u0430
+collection.useId=ID \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+checkbox.onlyMine=\u041F\u043E\u043A\u0430\u0437\u044B\u0432\u0430\u0442\u044C \u0442\u043E\u043B\u044C\u043A\u043E \u043C\u043E\u0438
+button.change=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
+button.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+commandSelector.promt=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043A\u043E\u043C\u0430\u043D\u0434\u0443
+commandSelector.commandArgsPromt=\u0410\u0440\u0433\u0443\u043C\u0435\u043D\u0442\u044B \u043A\u043E\u043C\u0430\u043D\u0434\u044B
+commandSelector.execute=\u0412\u044B\u043F\u043E\u043B\u043D\u0438\u0442\u044C
+button.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
+collection.editing=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
+collection.creating=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435
+button.close=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
+view.table=\u0422\u0430\u0431\u043B\u0438\u0446\u0430
+view.graph=\u0413\u0440\u0430\u0444\u0438\u043A
+button.logOut=\u0412\u044B\u0439\u0442\u0438
+button.deleteAccount=\u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0430\u043A\u043A\u0430\u0443\u043D\u0442
+button.update=Update
